# skaben

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  description.md  docker-compose.yml  entrypoint.sh  env.tmpl  index.html  mkdocs.yml  pyproject.toml  pytest.ini  schema.yml  skaben_data.json  skaben_initial_data.json  wsgi.py
.github/workflows/: mkdocs-deploy.yml  python-app.yml
Konsole/: README.md
LaserLock/: README.md  arduino2wiegand.ino  locker_2_0_rev_1.spl7
LaserLock/circuits/: locker_2_0_rev_1.spl7
Webview/: Dockerfile  README.md  app.py  requirements.txt
Webview/static/: index.html
deployment/: index.html
description/: index.html
development/: index.html
development/addressing/: index.html
development/transport/: index.html
device_configs/Konsole/: README.md  xfce4-keyboard-shortcuts.xml
docker/: Dockerfile
docker/nginx/: Dockerfile
docker/prom/: grafana-rabbit.json  prometheus.yml
docker/rabbitmq/: Dockerfile
docker_build/pgadmin/: docker-compose.yml
docker_build/prom/: Dockerfile  grafana-rabbit.json  prometheus.yml
docker_build/rabbitmq/: Dockerfile  definitions.json  rabbitmq.conf
docs/: deployment.md  index.md
docs/development/: addressing.md  index.md  transport.md
docs/operating/: alert_status.md  client_devices.md  index.md  light_array.md  lock.md  operator_guide.md  powerbox.md  scale.md  terminal.md
docs/todo/: features.md
misc/LaserLock/: wiringpi-2.32.1-py3.7-linux-armv7l.egg
operating/: index.html
operating/alert_status/: index.html
operating/client_devices/: index.html
operating/light_array/: index.html
operating/lock/: index.html
operating/operator_guide/: index.html
operating/scale/: index.html
search/: search_index.json
server/: settings.py
(+128 files in other folders)
